# FotoManagerGTK

./: .gitignore  Makefile.am  configure.ac
src/: #window.ui#  fm.gresource.xml  fmapplication.cpp  fmapplication.h  fmappwindow.cpp  fmappwindow.h  fotomanager_window.ui  gui_manager.cpp  gui_manager.h  main.cpp  resources.cpp  window.ui
