AUTOMAKE_OPTIONS = subdir-objects

bin_PROGRAMS = fotomanager

fotomanager_CXXFLAGS = $(GTKMM_CFLAGS)

fotomanager_SOURCES = \
		      src/main.cpp \
		      src/fmappwindow.h \
		      src/fmappwindow.cpp \
		      src/fmapplication.h \
		      src/fmapplication.cpp

fotomanager_LDFLAGS = $(GTKMM_LIBS)
